--- a/SoftUni HomeWorks/JavaScrip/Decimal to Hexadecimal/dec2hex.html
+++ b/SoftUni HomeWorks/JavaScrip/Decimal to Hexadecimal/dec2hex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>dec2hex</title>
+    <title>dec2hex_homework</title>
 	<script src="dec2hex.js"></script>
     
 </head>
